plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromExpectCompanion/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>WithCompanion<!> {
    companion <!LINE_MARKER("descr='Has actuals in jvm module'")!>object<!> {

    }
}
